--- a/app/src/main/res/layout/on_click_member.xml
+++ b/app/src/main/res/layout/on_click_member.xml
@@ -23,8 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_below="@+id/view"
-        android:layout_above="@+id/include" />
+        android:layout_below="@+id/view" />
     <include
         layout="@layout/menu"
         android:id="@+id/include"
