--- a/app/src/main/res/drawable/line.xml
+++ b/app/src/main/res/drawable/line.xml
@@ -7,7 +7,7 @@
         android:bottom="1dp"
         >
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#6A9A3A"/>
+            <stroke android:width="1px" android:color="#a6a6a6"/>
         </shape>
     </item>
 </layer-list>
