--- a/app/src/main/res/layout/afterlistclick.xml
+++ b/app/src/main/res/layout/afterlistclick.xml
@@ -2,16 +2,14 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5dp"
+
     android:scrollbars="none"
     android:fillViewport="false"
     android:layout_width="match_parent">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingRight="5dp"
-        android:paddingLeft="5dp"
-        >
+        android:padding="5dp" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,7 +26,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Asst. Engg at IBM"
-            android:id="@+id/textView_designation_profile"
+            android:id="@+id/textView_type"
             android:layout_below="@+id/textView_name_profile"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp" />
@@ -54,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BiIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO "
+            android:text="BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BiIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO "
             android:id="@+id/textView_bio"
             android:layout_below="@+id/textView_brach"
             android:layout_alignRight="@+id/textView_year"
@@ -71,7 +69,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Branch - CSE"
             android:id="@+id/textView_brach"
-            android:layout_below="@+id/textView_designation_profile"
+            android:layout_below="@+id/textView_type"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp" />
 
@@ -87,10 +85,10 @@
             android:layout_alignParentEnd="true" />
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view_location"
+            android:id="@+id/card_view_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card_view:cardCornerRadius="4dp"
+            card_view:cardCornerRadius="2dp"
             android:layout_below="@+id/textView_bio"
             android:layout_marginTop="5dp"
             android:layout_alignParentLeft="true"
@@ -99,18 +97,23 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
                 <TextView
                     android:id="@+id/info_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:text="Location" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="#a6a6a6"
+                    android:layout_below="@id/info_text" />
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Jaipur"
                     android:id="@+id/textView_home_profile"
@@ -119,6 +122,13 @@
                     android:layout_alignLeft="@+id/textView_location_profile"
                     android:layout_alignStart="@+id/textView_location_profile"
                     android:layout_marginTop="5dp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="#a6a6a6"
+                    android:layout_below="@+id/textView_home_profile"
+                    android:layout_toRightOf="@+id/imageView_work"
+                    android:layout_toEndOf="@+id/imageView_work" />
 
                 <ImageView
                     android:layout_width="16dp"
@@ -142,16 +152,17 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Mumbai"
                     android:id="@+id/textView_location_profile"
                     android:layout_below="@+id/textView_home_profile"
                     android:layout_toRightOf="@+id/imageView_work"
                     android:layout_toEndOf="@+id/imageView_work"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_margin="5dp"
+                     />
+
+
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -161,22 +172,22 @@
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card_view:cardCornerRadius="4dp"
-            android:padding="0dp"
-            android:layout_below="@+id/card_view_location"
-            android:layout_alignLeft="@+id/card_view_location"
-            android:layout_alignStart="@+id/card_view_location"
-            android:layout_marginTop="5dp">
+            card_view:cardCornerRadius="2dp"
+            android:padding="5dp"
+            android:layout_below="@+id/card_view_description"
+            android:layout_alignLeft="@+id/card_view_description"
+            android:layout_alignStart="@+id/card_view_description"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/card_view_location"
+                android:layout_below="@+id/card_view_description"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
                 android:nestedScrollingEnabled="false"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp">
+                android:padding="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -186,22 +197,35 @@
                     android:id="@+id/textView_fblink2"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="#a6a6a6"
+                    android:layout_below="@id/textView_fblink2" />
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Twitter"
                     android:id="@+id/textView_twlink"
                     android:layout_below="@+id/textView_fblink2"
                     android:layout_toRightOf="@+id/imageView_fb"
                     android:layout_toEndOf="@+id/imageView_fb"
-                    android:layout_margin="5dp" />
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="#a6a6a6"
+                    android:layout_below="@+id/textView_twlink"
+                    android:layout_toRightOf="@+id/imageView_in"
+                    android:layout_toEndOf="@+id/imageView_in" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="email"
                     android:id="@+id/textView_email"
@@ -209,17 +233,26 @@
                     android:layout_alignLeft="@+id/textView_twlink"
                     android:layout_alignStart="@+id/textView_twlink"
                     android:layout_marginTop="5dp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="#a6a6a6"
+                    android:layout_below="@+id/textView_email"
+                    android:layout_toRightOf="@+id/imageView_in"
+                    android:layout_toEndOf="@+id/imageView_in" />
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Phone"
                     android:id="@+id/textView_contact"
                     android:layout_below="@+id/imageView_in"
                     android:layout_alignLeft="@+id/textView_email"
                     android:layout_alignStart="@+id/textView_email"
-                    android:layout_marginTop="5dp" />
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"/>
+
 
 
                 <ImageView
