--- a/app/src/main/res/layout/job_profile.xml
+++ b/app/src/main/res/layout/job_profile.xml
@@ -27,8 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Asst. Engg at IBM"
-            android:id="@+id/textView_designation_profile"
+            android:text="Type"
+            android:id="@+id/textView_type"
             android:layout_below="@+id/textView_name_profile"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp" />
@@ -50,102 +50,38 @@
             android:src="@drawable/image"
             android:layout_marginTop="10dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BiIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO "
-            android:id="@+id/textView_bio"
-            android:layout_below="@+id/textView_brach"
-            android:layout_alignRight="@+id/textView_year"
-            android:layout_alignEnd="@+id/textView_year"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp" />
-
-
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Branch - CSE"
+            android:text="Location"
             android:id="@+id/textView_brach"
-            android:layout_below="@+id/textView_designation_profile"
+            android:layout_below="@+id/textView_type"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp" />
 
 
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view_location"
+            android:id="@+id/card_view_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card_view:cardCornerRadius="4dp"
-            android:layout_below="@+id/textView_bio"
-            android:layout_marginTop="5dp"
+            android:layout_below="@+id/textView_descxiption"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_gravity="left|center">
-            <RelativeLayout
+            android:layout_marginTop="10dp">
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
-                <TextView
-                    android:id="@+id/info_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:text="Location" />
+                android:textAppearance="?android:textAppearanceMedium"
+                android:text="Job  Description - khdblhboh ouyg ouygfuyg ouy gouyf giauygfiuy foauygf oasyufg ausoyfg asuydfg oasuyfg asuyfg siuyfgisu yfsi ufysf gsuyf g"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Jaipur"
-                    android:id="@+id/textView_home_profile"
-                    android:layout_below="@+id/info_text"
 
-                    android:layout_alignLeft="@+id/textView_location_profile"
-                    android:layout_alignStart="@+id/textView_location_profile"
-                    android:layout_marginTop="5dp" />
 
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:id="@+id/imageView_work"
-                    android:src="@drawable/work"
-                    android:layout_alignTop="@+id/textView_location_profile"
-                    android:layout_alignLeft="@+id/info_text"
-                    android:layout_alignStart="@+id/info_text"
-                    android:layout_marginTop="2dp" />
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:id="@+id/imageView_home"
-                    android:src="@drawable/home"
-                    android:layout_alignTop="@+id/textView_home_profile"
-                    android:layout_alignLeft="@+id/imageView_work"
-                    android:layout_alignStart="@+id/imageView_work"
-                    android:layout_marginTop="2dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Mumbai"
-                    android:id="@+id/textView_location_profile"
-                    android:layout_below="@+id/textView_home_profile"
-                    android:layout_toRightOf="@+id/imageView_work"
-                    android:layout_toEndOf="@+id/imageView_work"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp" />
-
-            </RelativeLayout>
         </android.support.v7.widget.CardView>
+
+
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_contact"
@@ -154,14 +90,14 @@
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="4dp"
             android:padding="0dp"
-            android:layout_below="@+id/card_view_location"
-            android:layout_alignLeft="@+id/card_view_location"
-            android:layout_alignStart="@+id/card_view_location"
+            android:layout_below="@+id/card_view_description"
+            android:layout_alignLeft="@+id/card_view_description"
+            android:layout_alignStart="@+id/card_view_description"
             android:layout_marginTop="5dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/card_view_location"
+                android:layout_below="@+id/card_view_description"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
@@ -205,12 +141,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Phone"
+                    android:text="Website"
                     android:id="@+id/textView_contact"
                     android:layout_below="@+id/imageView_in"
                     android:layout_alignLeft="@+id/textView_email"
                     android:layout_alignStart="@+id/textView_email"
-                    android:layout_marginTop="5dp" />
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"/>
 
 
                 <ImageView
@@ -226,7 +163,7 @@
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:id="@+id/imageView_tw"
-                    android:src="@drawable/ph"
+                    android:src="@drawable/website"
                     android:layout_alignTop="@+id/textView_contact"
                     android:layout_alignLeft="@+id/imageView_in"
                     android:layout_alignStart="@+id/imageView_in"
@@ -242,5 +179,27 @@
                     android:layout_marginTop="2dp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Description"
+            android:id="@+id/textView_descxiption"
+            android:layout_below="@+id/textView_brach"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/imageView"
+            android:src="@drawable/location"
+            android:layout_alignBottom="@+id/textView_brach"
+            android:layout_toLeftOf="@+id/textView_brach"
+            android:layout_toStartOf="@+id/textView_brach"
+            android:layout_marginRight="10dp" />
+
+
     </RelativeLayout>
 </ScrollView>
