--- a/app/src/main/res/layout/on_click_member.xml
+++ b/app/src/main/res/layout/on_click_member.xml
@@ -14,6 +14,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#d60d0d"
             app:tabMode="fixed"
             app:tabGravity="fill"/>
     </android.support.design.widget.AppBarLayout>
@@ -23,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_below="@+id/view" />
+        android:layout_below="@+id/view"
+        android:layout_above="@+id/include" />
     <include
         layout="@layout/menu"
         android:id="@+id/include"
