--- a/app/src/main/res/layout/on_job_click.xml
+++ b/app/src/main/res/layout/on_job_click.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView_jobpost"
+        android:divider="@drawable/divider"
         android:layout_above="@+id/include"
         android:layout_margin="5dp" />
 </RelativeLayout>
