--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -84,9 +84,10 @@
         android:scaleType="fitXY"/>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="1px"
         android:layout_below="@id/profileimage"
-        android:background="#9e9e9e"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"></View>
+        android:background="#a6a6a6"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"/>
 </RelativeLayout>
