--- a/app/src/main/res/layout/simple_list_item_job.xml
+++ b/app/src/main/res/layout/simple_list_item_job.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="5dp">
 
     <ImageView
         android:layout_width="80dp"
@@ -16,13 +17,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Company Name"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageView_job_profile"
         android:layout_toEndOf="@+id/imageView_job_profile"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp" />
 
     <ImageView
         android:layout_width="16dp"
@@ -37,7 +39,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Pune"
         android:id="@+id/textView_joblocation"
         android:layout_below="@+id/textView2"
@@ -59,8 +61,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Intern (2)"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Intern"
         android:id="@+id/textView4"
         android:layout_alignBottom="@+id/imageView_job_profile"
         android:layout_alignLeft="@+id/textView_joblocation"
@@ -70,7 +72,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="End-Date"
         android:id="@+id/textView5"
         android:layout_alignBottom="@+id/imageView4"
@@ -80,10 +82,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Technical"
         android:id="@+id/textView6"
         android:layout_alignTop="@+id/imageView5"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@id/imageView_job_profile"
+        android:background="#9e9e9e"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"/>
 </RelativeLayout>
