--- a/app/src/main/res/layout/on_filter_click.xml
+++ b/app/src/main/res/layout/on_filter_click.xml
@@ -13,4 +13,14 @@
         android:layout_alignParentStart="true">
     </include>
 
+    <ExpandableListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/expandableListView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/include" />
+
+
 </RelativeLayout>
